feat: added POST handler for collaborator
